--- a/package.json
+++ b/package.json
@@ -12,16 +12,18 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.9",
+    "@types/jest": "^26.0.15",
     "@types/node": "^14.14.7",
+    "@types/socket.io": "^2.1.11",
     "concurrently": "^5.3.0",
     "nodemon": "^2.0.6",
     "typescript": "^4.0.5"
   },
   "dependencies": {
-    "@types/jest": "^26.0.15",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "jest": "^26.6.3",
+    "socket.io": "^3.0.2",
     "ts-jest": "^26.4.4"
   }
 }
