--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "jest": "^26.6.3",
+    "rxjs": "^6.6.3",
     "socket.io": "^3.0.2",
     "ts-jest": "^26.4.4"
   }
