--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/express": "^4.17.9",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.7",
+    "@types/rx": "^4.1.2",
     "@types/socket.io": "^2.1.11",
     "concurrently": "^5.3.0",
     "nodemon": "^2.0.6",
