--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "test": "jest",
-    "start": "node dist/index.js",
-    "dev": "concurrently \"tsc -w\" \"nodemon dist/index.js\""
+    "test:build": "tsc -w",
+    "test:watch": "jest --watchAll --testPathPattern=dist/tests",
+    "test": "concurrently npm:test:*",
+    "start:build": "tsc -w",
+    "start:run": "nodemon dist/index.js",
+    "start": "concurrently npm:start:*"
   },
   "author": "",
   "license": "ISC",
@@ -23,6 +26,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "immutable": "^4.0.0-rc.12",
     "jest": "^26.6.3",
     "rxjs": "^6.6.3",
     "socket.io": "^3.0.2",
