--- a/tsconfig.json
+++ b/tsconfig.json
@@ -65,5 +65,6 @@
     /* Advanced Options */
     "skipLibCheck": true,                     /* Skip type checking of declaration files. */
     "forceConsistentCasingInFileNames": false  /* Disallow inconsistently-cased references to the same file. */
-  }
+  },
+  "exclude": ["reference"]
 }
