--- a/package.json
+++ b/package.json
@@ -14,22 +14,24 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/express": "^4.17.9",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^14.14.7",
-    "@types/rx": "^4.1.2",
-    "@types/socket.io": "^2.1.11",
     "concurrently": "^5.3.0",
     "nodemon": "^2.0.6",
     "typescript": "^4.0.5"
   },
   "dependencies": {
+    "@types/express": "^4.17.9",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^14.14.7",
+    "@types/rx": "^4.1.2",
+    "@types/socket.io": "^2.1.11",
+    "@types/uuid": "^8.3.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "immutable": "^4.0.0-rc.12",
     "jest": "^26.6.3",
     "rxjs": "^6.6.3",
     "socket.io": "^3.0.2",
-    "ts-jest": "^26.4.4"
+    "ts-jest": "^26.4.4",
+    "uuid": "^8.3.2"
   }
 }
